--- a/yii/psyco-public/.gitignore
+++ b/yii/psyco-public/.gitignore
@@ -37,9 +37,10 @@ phpunit.phar
 /.vagrant
 
 # ignore generated files
-/frontend/web/index.php
-/frontend/web/index-test.php
-/frontend/web/robots.txt
-/backend/web/index.php
-/backend/web/index-test.php
-/backend/web/robots.txt
+backend/web/
+frontend/web/
+website/web/
+frontend/web/
+frontend/config/
+backend/config/
+website/config/
