--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "kartik-v/yii2-bootstrap4-dropdown": "@dev",
         "richardfan1126/yii2-js-register":"*",
         "dektrium/yii2-rbac": "1.0.0-alpha@dev",
-        "mdmsoft/yii2-admin": "~2.0"
+        "mdmsoft/yii2-admin": "~2.0",
+        "softark/yii2-dual-listbox": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
